data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2338.wast
;; 9. Design a block utilizing `br_if` within a switch or table-based control flow where the condition ensuring no branch must resolve. Observe unintended branch execution paths, indicating condition checks misinterpreted within complex control structures.

(assert_invalid
  (module (func $block-branch-if-switch (result i32)
    (block (result i32)
      (block (result i32)
        (block (result i32)
          (br_if 0 (i32.const 0))
          (br_table 0 1 2 (i32.const 1))
        )
        (i32.const 0)
      )
    )
  ))
  "type mismatch"
)